# slam-tricks

./: .gitignore  .gitmodules  readme.md
st0-core/: .gitignore
st0-core/docs/: notes.tex
st0-core/include/: struct_def.hpp
st1-undistort/: CMakeLists.txt
st1-undistort/src/: CMakeLists.txt  main.cpp
st1-undistort/src/include/: struct_define.hpp  undistort_img.hpp  undistort_pt.hpp
st10-chessCorner/: CMakeLists.txt  vals.txt
st10-chessCorner/output/: corners.txt
st10-chessCorner/pyDrawer/: drawer.py  hist.csv
st10-chessCorner/src/: CMakeLists.txt  clib.cpp  funny.cpp  main.cpp
st10-chessCorner/src/include/: cbcorners.h  chessboard.h  detector.h  helper.h  prototype.h
st10-chessCorner/src/src/: cbcorners.cpp  detector.cpp  helper.cpp  prototype.cpp
st11-panorama/: CMakeLists.txt
st11-panorama/src/: CMakeLists.txt  main.cpp
st11-panorama/src/include/: feature.h  help.hpp  panorama.h  projective.h
st11-panorama/src/src/: feature.cpp  panorama.cpp  projective.cpp
st12-ransaplus/: CMakeLists.txt
st12-ransaplus/data/: inliers.txt  lsq.txt  outliers.txt  pts.txt  ransac.txt  ransac_ms.txt
st12-ransaplus/docs/: ransacplus.tex
st12-ransaplus/pyDrawer/: drawer1.py  drawer2.py
st12-ransaplus/src/: CMakeLists.txt  main.cpp
st12-ransaplus/src/include/: ransac.hpp
st13-directmethod/: .gitignore  CMakeLists.txt
st13-directmethod/src/: CMakeLists.txt  main.cpp
st13-directmethod/src/include/: direct.h  help.h
st13-directmethod/src/src/: direct.cpp  help.cpp
st14-ins/: CMakeLists.txt
st14-ins/docs/: ins.tex
st14-ins/src/: CMakeLists.txt  main.cpp
st14-ins/src/include/: ellipsoid.hpp  ins.h
st14-ins/src/src/: ins.cpp
st15-git/: git-note.md
st15-git/docs/: .$git-group.bkp  .$git-group.dtmp  git-group
st16-pcl-viewer/: CMakeLists.txt
st16-pcl-viewer/data/feature/: features.pcd
st16-pcl-viewer/data/odom_imu/: odometryInfo.txt
st16-pcl-viewer/data/odom_lidar/: odometryInfo.txt
st16-pcl-viewer/data/odom_vicon/: odometryInfo.txt
st16-pcl-viewer/src/: CMakeLists.txt  main.cpp
st16-pcl-viewer/src/include/: colour.hpp  logger.h  pose.hpp  scene.h
st16-pcl-viewer/src/src/: scene.cpp
st17-ceres/: .gitignore  CMakeLists.txt
st17-ceres/docs/: notes.aux  notes.tex  notes.toc
st17-ceres/drawio/: SizedCostFunction
st17-ceres/src/: CMakeLists.txt  ceres_bound.cpp  main.cpp
st17-ceres/src/include/: colour.hpp  pose.hpp  scene.h  solver.hpp
st17-ceres/src/src/: scene.cpp
st18-cmake/: .gitignore
st18-cmake/program/: CMakeLists.txt  main.cpp
st19-distortion/: .gitignore  CMakeLists.txt
st19-distortion/src/: CMakeLists.txt
st19-distortion/src/include/: colour.hpp  lidar.h  rolling_shut.h
st19-distortion/src/src/: lidar.cpp  rolling_shut.cpp
st2-epipolar/: CMakeLists.txt
st2-epipolar/output/: normalize.csv
st2-epipolar/src/: CMakeLists.txt  main.cpp
st2-epipolar/src/include/: epipolar.hpp  recovery.hpp  triangulation.hpp
st20-g2o/: .gitignore  CMakeLists.txt
st20-g2o/src/: CMakeLists.txt
st20-g2o/src/include/: sim_data.h  test_ceres.h  test_g2o.h
st20-g2o/src/src/: sim_data.cpp  test_ceres.cpp  test_g2o.cpp
st21-lie/: lie-group.aux  lie-group.tex  lie-group.toc
st22-two-view/: .gitignore  CMakeLists.txt
st22-two-view/docs/: note.tex
st22-two-view/src/: CMakeLists.txt  main.cpp
st22-two-view/src/include/: two_view_geometry.h  two_view_simu.h
st22-two-view/src/src/: two_view_geometry.cpp  two_view_simu.cpp
st23-lie-group-v2/: doc.tex  reference.bib
st3-calibration/: CMakeLists.txt
st3-calibration/calib/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
st3-calibration/src/: CMakeLists.txt  main.cpp
st3-calibration/src/include/: calib.h  cbcorners.h  helper.h
st3-calibration/src/src/: calib.cpp  cbcorner.cpp  helper.cpp
st4-kalman/: CMakeLists.txt
st4-kalman/output/: obs.csv  truth.csv
st4-kalman/src/: CMakeLists.txt  main.cpp
st4-kalman/src/include/: pose_simulation.h  solver.h
st4-kalman/src/src/: pose_simulation.cpp
st5-opticalflow/: CMakeLists.txt
st5-opticalflow/src/: CMakeLists.txt  main.cpp
st5-opticalflow/src/include/: opticalflow.hpp
st6-icp/: .gitignore  CMakeLists.txt
st6-icp/log/binding/: pc1_prime_1.csv  pc1_prime_2.csv  pc2.csv
st6-icp/log/nobinding/: pc1.csv  pc1_prime_1.csv  pc1_prime_2.csv  pc1_prime_3.csv  pc1_prime_4.csv
st6-icp/pyDraw/binding/: draw.py
st6-icp/pyDraw/nobinding/: draw.py
st6-icp/src/: CMakeLists.txt  binding.cpp  nobinding.cpp
st6-icp/src/include/: icp.hpp
st7-ransac/: .gitignore  CMakeLists.txt
st7-ransac/pyDraw/: drawerResult.py
st7-ransca/data/: bad.csv  good.csv
st7-ransca/pyDraw/: drawer.py
st7-ransca/src/: CMakeLists.txt  main.cpp
st7-ransca/src/include/: parabola.hpp
st8-nms/: .gitignore  CMakeLists.txt
st8-nms/pyDrawer/: nms1d.py
st8-nms/src/: CMakeLists.txt  main.cpp
st8-nms/src/include/: nms.hpp
st9-affine/: .gitignore  CMakeLists.txt
st9-affine/src/: main.cpp
st9-affine/src/include/: projective.hpp
st9-projective/: CMakeLists.txt
st9-projective/src/: CMakeLists.txt  main.cpp
